--- a/MastersProjectClient/Pages/Index.razor
+++ b/MastersProjectClient/Pages/Index.razor
@@ -1,9 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>NO AI !!!</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>No to AI!!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<img src="https://preview.redd.it/say-no-to-ai-generated-images-v0-9wt0zdtidd6a1.jpg?auto=webp&s=d2dc015a5a26ee6075fda7d8430ea47a92769e01"
+    height="500"/>
